force-app/main/default/objects/Insurance_Enrollment__c.object
<CustomObject>
    <label>Insurance Enrollment</label>
    <nameField>
        <label>Insurance Enrollment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Insurance Enrollments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>