force-app/main/default/objects/Insurance_Enrollment__c/fields/Coverage_Tier__c.field-meta.xml
<CustomField>
    <fullName>Coverage_Tier__c</fullName>
    <label>Coverage Tier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Employee Only</fullName>
            </value>
            <value>
                <fullName>Employee + Spouse</fullName>
            </value>
            <value>
                <fullName>Employee + Child(ren)</fullName>
            </value>
            <value>
                <fullName>Family</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>