force-app/main/default/objects/Insurance_Enrollment__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer</label>
    <referenceTo>Customer__c</referenceTo>
    <relationshipLabel>Enrollments</relationshipLabel>
    <relationshipName>Insurance_Enrollments</relationshipName>
    <type>Lookup</type>
</CustomField>