force-app/main/default/objects/Insurance_Enrollment__c/fields/Employer__c.field-meta.xml
<CustomField>
    <fullName>Employer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Employer</label>
    <referenceTo>Employer__c</referenceTo>
    <relationshipLabel>Enrollments</relationshipLabel>
    <relationshipName>Insurance_Enrollments</relationshipName>
    <type>Lookup</type>
</CustomField>