force-app/main/default/objects/Insurance_Enrollment__c/fields/Employer_Contribution__c.field-meta.xml
<CustomField>
    <fullName>Employer_Contribution__c</fullName>
    <label>Employer Contribution</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>