force-app/main/default/objects/Insurance_Enrollment__c/fields/Includes_Add_ons__c.field-meta.xml
<CustomField>
    <fullName>Includes_Add_ons__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Includes Add-ons</label>
    <type>Checkbox</type>
</CustomField>