force-app/main/default/objects/Insurance_Enrollment__c/fields/Includes_Dependents__c.field-meta.xml
<CustomField>
    <fullName>Includes_Dependents__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Includes Dependents</label>
    <type>Checkbox</type>
</CustomField>